# blueskyranker

./: .env.example  .gitignore  Dockerfile  README.md  blueskyranker.py  docker-compose.yml  example.ipynb  fetch_bsky_author_feeds_progress.py  newsflows.db-shm  newsflows.db-wal  pyproject.toml  ranked_sbert_sample.csv  requirements.txt
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
blueskyranker/: .env  __init__.py  actor_annotator.py  actor_extraction_prompt.txt  bridge.py  cluster_report.py  enrich_actors.py  fetcher.py  nl_politicians.csv  pipeline.py  ranker.py  sample_db.py
scripts/: update_example_nb.py
tests/: test_windows.py
